# JobScheduler

./: README.md
GUI File & Cmake/: CMakeLists.txt  mainwindow.ui
Header Files/: Job.h  JobScheduler.h  mainwindow.h
Source Files/: jobscheduler.cpp  main.cpp  mainwindow.cpp
